--- a/pkg/views/index.html
+++ b/pkg/views/index.html
@@ -1,1 +1,12 @@
-<h1>welcome sucka</h1>
+<html>
+<head>
+  <title>Efficiency List</title>
+</head>
+<body>
+
+  <h1>Efficiency List</h1>
+
+  <h3>Easily find the most efficient EnergyStar certified  appliances</h3>
+
+</body>
+</html>
