build routes, basic html views, and attempt to render api json to html

--- a/pkg/views/displays.ejs
+++ b/pkg/views/displays.ejs
@@ -4,7 +4,7 @@
 </head>
 <body>
 
-  <h1>EnergyStar Certified Residential Dishwashers</h1>
+  <h1>EnergyStar Certified Displays</h1>
 
   <div>
     <%= list %>
