add for loop to appliance ejs views to try to iterate through json object

--- a/pkg/views/dishwashers.ejs
+++ b/pkg/views/dishwashers.ejs
@@ -7,6 +7,9 @@
   <h1>EnergyStar Certified Residential Dishwashers</h1>
 
   <div>
+  	<% for(var i=0; i<list.length; i++) {%>
+  		<li><%= list[i].brand_name %></li>
+  	<% } %>
     <%= list %>
   </div>
 
