--- a/pkg/views/audio_video.ejs
+++ b/pkg/views/audio_video.ejs
@@ -1,6 +1,8 @@
 <html>
 <head>
-  <title>Efficiency List</title>
+	<link rel="stylesheet" type="text/css" href="/stylesheets/stylesheet.css">
+  <script src="../public/javascripts/application.js"></script>
+  	<title>Efficiency List</title>
 </head>
 <body>
 
