--- a/pkg/views/index.ejs
+++ b/pkg/views/index.ejs
@@ -1,7 +1,7 @@
 <html>
 <head>
 	<link rel="stylesheet" type="text/css" href="/stylesheets/stylesheet.css">
-	<script 								src="/javascripts/application.js"></script>
+	<script src="../public/javascripts/application.js"></script>
   	<title>Efficiency List</title>
 </head>
 <body>
@@ -13,17 +13,23 @@
   		<h3>Easily find the most efficient EnergyStar certified  appliances</h3>
   	</div>
 
-  	<div class="container">
+  	<div class="list_container">
   		<h3>browse appliances</h3>
-		<ul class="dropdown-menu">
-    		<li><a href="/dishwashers">dishwashers</a></li>
-    		<li><a href="/washing_machines">washing machines</a></li>
-    		<li><a href="/displays">displays</a></li>
-    		<li><a href="/audio_video">audio video equipment</a></li>
-    		<li><a href="/water_heaters">water heaters</a></li>
-    		<li><a href="/refrigerators">refrigerators</a></li>
-    		<li><a href="/freezers">freezers</a></li>
-		</ul>
+  		<ul class="main_menu">
+      		<li><a href="/dishwashers">dishwashers</a></li>
+      		<li><a href="/washing_machines">washing machines</a></li>
+      		<li><a href="/displays">displays</a></li>
+      		<li><a href="/audio_video">audio video equipment</a></li>
+      		<li><a href="/water_heaters">water heaters</a></li>
+      		<li><a href="/refrigerators">refrigerators</a></li>
+      		<li><a href="/freezers">freezers</a></li>
+  		</ul>
   	</div>
+
+    <div class="search">
+    <form action="/search">
+      
+    </form>
+    </div>
 </body>
 </html>
