--- a/pkg/views/index.ejs
+++ b/pkg/views/index.ejs
@@ -2,6 +2,8 @@
 <head>
 	<link rel="stylesheet" type="text/css" href="/stylesheets/stylesheet.css">
 	<script src="../public/javascripts/application.js"></script>
+  <% include partials/head %>
+  <% include partials/header %>
   	<title>Efficiency List</title>
 </head>
 <body>
@@ -14,7 +16,7 @@
   	</div>
 
   	<div class="list_container">
-  		<h3>browse appliances</h3>
+  		<h3>browse</h3>
   		<ul class="main_menu">
       		<li><a href="/dishwashers">dishwashers</a></li>
       		<li><a href="/washing_machines">washing machines</a></li>
