work on css styling and positioning

--- a/pkg/views/index.ejs
+++ b/pkg/views/index.ejs
@@ -4,34 +4,33 @@
 	<script src="../public/javascripts/application.js"></script>
   <% include partials/head %>
   <% include partials/header %>
+  <% include partials/footer %>
   	<title>Efficiency List</title>
 </head>
 <body>
-	<div class="header-title">
+<!-- 	<div class="header-title">
   		<h1>Efficiency List</h1>
-  	</div>
+  </div> -->
 
-  	<div class="header_subtitle">
-  		<h3>Easily find the most efficient EnergyStar certified  appliances</h3>
-  	</div>
+	<div class="header_subtitle">
+		<h3>Easily find the most efficient EnergyStar certified  appliances</h3>
+	</div>
 
-  	<div class="list_container">
-  		<h3>browse</h3>
-  		<ul class="main_menu">
-      		<li><a href="/dishwashers">dishwashers</a></li>
-      		<li><a href="/washing_machines">washing machines</a></li>
-      		<li><a href="/displays">displays</a></li>
-      		<li><a href="/audio_video">audio video equipment</a></li>
-      		<li><a href="/water_heaters">water heaters</a></li>
-      		<li><a href="/refrigerators">refrigerators</a></li>
-      		<li><a href="/freezers">freezers</a></li>
-  		</ul>
-  	</div>
+	<div class="list_container">
+		<h3>browse appliances</h3>
+		<ul class="main_menu">
+    		<li><a href="/dishwashers">dishwashers</a></li>
+    		<li><a href="/washing_machines">washing machines</a></li>
+    		<li><a href="/displays">displays</a></li>
+    		<li><a href="/audio_video">audio video equipment</a></li>
+    		<li><a href="/water_heaters">water heaters</a></li>
+    		<li><a href="/refrigerators">refrigerators</a></li>
+    		<li><a href="/freezers">freezers</a></li>
+		</ul>
+	</div>
 
-    <div class="search">
-    <form action="/search">
-      
-    </form>
+  <div class="search">
+    <form action="/search"></form>
     </div>
 </body>
 </html>
