--- a/pkg/views/partials/footer.ejs
+++ b/pkg/views/partials/footer.ejs
@@ -1,1 +1,8 @@
-<p class="text-center text-muted">Copyright 2015 Thuper Awesome Things</p>
+<div class="footer">
+	<p class="text-center text-muted" id="footer">Copyright 2015 Thuper Awesome Things</p>
+	<p id="footer-legal">
+		<a class="footer-menu" href="/legal">legal</a>
+		<a class="footer-menu" href="/legal">support</a>
+		<a class="footer-menu" href="/legal">contact</a>
+	</p>
+</div>
