--- a/pkg/views/partials/header.ejs
+++ b/pkg/views/partials/header.ejs
@@ -1,12 +1,13 @@
 <nav class="navbar navbar-default" role="navigation">
 	<div class="container-fluid">
 		<div class="navbar-header">
-			<a class="navbar-brand" href="#"> <span class="glyphicon glyphicon glyphicon-tree-deciduous"></span>EJS IS FUN</a> 
+			<a class="navbar_title" href="#"> <!-- <span class="glyphicon glyphicon glyphicon-tree-deciduous"></span> --> Efficiency List</a> 
 		</div>
 
 		<ul class="nav navbar-nav">
-			<li><a href="/">home</a></li>
-			<li><a href="/about">about</a></li>
+			<li id="navbar-home"><a href="/">home</a></li>
+			<li id="navbar-home"><a href="/social">social</a></li>
+			<li id="navbar-about"><a href="/about">about</a></li>
 		</ul>
 	</div>
 </nav>
