--- a/pkg/public/stylesheets/stylesheet.css
+++ b/pkg/public/stylesheets/stylesheet.css
@@ -69,16 +69,78 @@ h1 {
 
 .list_container h3 {
   /*border: 1px solid black;*/
-  width: 200px;
+  width: 300px;
   height: 7%;
   position: relative;
+  left: 7px;
   top: 13px;
   font-family: 'Pacifico';
   font-weight: normal;
   font-size: 30px;
 }
 
+.navbar-header {
+  /*border: 1px solid black;*/
+  position:relative;
+  top: 6px;
+  width: 200px;
+}
 
+.container-fluid {
+  border: 1px solid black;
+  height: 10%;
+}
 
+.navbar-nav {
+  /*border: 1px solid black;*/
+  height: 100%;
+  position: absolute;
+  right: 10px;
+}
 
+#navbar-home {
+  /*border: 1px solid black;*/
+  position: relative;
+  top: 2.2px;
+}
 
+#navbar-about {
+  /*border: 1px solid black; */
+  position: relative;
+  top: 2.2px;
+}
+
+.navbar_title {
+  /*border: 1px solid black;*/
+  color: black;
+  font-family: 'Pacifico';
+  font-weight: normal;
+  font-size: 30px;
+}
+
+.footer {
+  border: 1px solid black;
+  position: absolute;
+  bottom: 0px;
+  width: 100%;
+  background-color: rgb(232,232,232);
+}
+
+.footer p {
+  /*border: 1px solid blue;*/
+  width: 30%;
+  position: relative;
+  left: 35%;
+  top: 5px;
+  display: inline-block;
+}
+
+#footer-legal {
+  right: 0%;
+  text-align: right;
+}
+
+.footer-menu {
+  display: inline-block;
+  margin: 3px;
+}
